@@ -8,6 +8,13 @@ Sources
 Releases
 {
 
+  v8r5p5
+  {
+    Modules = LHCbDIRAC:v8r5p5, LHCbWebDIRAC:v4r2p5
+    Depends = DIRAC:v6r17p7
+    LcgVer = 2016-11-03
+  }
+
   v8r5p4
   {
     Modules = LHCbDIRAC:v8r5p4, LHCbWebDIRAC:v4r2p5
