@@ -1,9 +1,9 @@
 {
   "name": "LHCbDirac",
-  "version": "v8r5p4",
+  "version": "v8r5p5",
   "used_projects": {
     "project": [
-      [ "Dirac", "v6r17p6",
+      [ "Dirac", "v6r17p7",
         [ "bin", "python", "lib" ]
       ],
       [ "LHCbGrid", "v11r1",
